# pysnip

./: .gitignore  MANIFEST.in  Makefile  README.md  project.pp1.yaml  pyproject.toml  script.py  script.spec  setup.json  setup.py
.circleci/: config.yml  pysnip_tests.tests
latex/: .gitignore  Makefile  pysnip-manual.tex  pysnip.sty
src/pysnip/: __init__.py  capture.py  job.py  lenient_option_parser.py  main.py  meat.py  write_source.py
src/pysnip/make/: __init__.py  job.py  main.py  meat.py
src/pysnip/utils/: __init__.py  capture.py  lenient_option_parser.py  script_utils.py
src/pysnip_tests/: test1.py
